TOMEE-2321 add TomEE Maven plugin