@@ -54,6 +54,14 @@
         <artifactId>maven-war-plugin</artifactId>
         <version>3.1.0</version>
       </plugin>
+      <plugin>
+        <groupId>org.apache.tomee.maven</groupId>
+        <artifactId>tomee-maven-plugin</artifactId>
+        <version>8.0.0-SNAPSHOT</version>
+        <configuration>
+          <args>-Xmx512m -XX:PermSize=256m</args>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
